modules/gdscript/tests/scripts/analyzer/errors/assign_enum.gd
enum { V }
func test():
	V = 1
